<resources>
    <string name="app_name">Bookcrossing</string>
    <string name="app_deep_link">bookcrossing</string>

    <string name="enter">Войти</string>
    <string name="drawer_menu_item_main">Мои книги</string>
    <string name="drawer_menu_item_friends">Книги друзей</string>
    <string name="drawer_menu_item_folders">Книги по разделам</string>
    <string name="drawer_menu_item_recommendations">Рекомендации</string>
    <string name="drawer_menu_item_exit">Выход</string>
    <string name="search">Поиск</string>
    <string name="logout_error">Упс.. не удалось выйти</string>
    <string name="navigation_drawer_open">Меню</string>
    <string name="navigation_drawer_close">Меню скрыто</string>
    <string name="auth_error">Ошибка авторизации</string>
    <string name="download_error">Ошибка загрузки данных</string>
    <string name="need_permission_message">Для этого действия приложению нужны специальные разрешения</string>
    <string name="download_string">Загрузка</string>
    <string name="no_one_book"> <b> Не найдено ни одной книги для отображения :( </b> </string>
    <string name="auth_or_add_new_book"> Авторизуйтесь в VK для\u00A0синхронизации\u00A0документов \n
    или добавьте новую книгу, используя кнопку в\u00A0правом\u00A0нижнем\u00A0углу</string>
    <string name="file_chooser_error">Установите файловый менеджер!</string>
    <string name="file_chooser_title">Выберите книгу</string>
    <integer name="com_vk_sdk_AppId">5278883</integer>
</resources>
