<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/drawer_menu_item_main" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/drawer_menu_item_friends" />
        <item
            android:id="@+id/nav_folders"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/drawer_menu_item_folders" />
        <item
            android:id="@+id/nav_recommendations"
            android:icon="@drawable/ic_cast_black_24dp"
            android:title="@string/drawer_menu_item_recommendations" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/drawer_menu_item_exit" />
    </group>

</menu>
